[WK2] Adjust missing MessageID removals to fix build breaks https://bugs.webkit.org/show_bug.cgi?id=108276

Unreviewed to fix build breaks.

Some MessageID removals wasn't adjusted into ConnectionUnix.cpp and coordinated graphics.

* Platform/CoreIPC/unix/ConnectionUnix.cpp:
(CoreIPC::MessageInfo::MessageInfo):
(CoreIPC::MessageInfo::setMessageBodyIsOutOfLine):
(CoreIPC::MessageInfo::isMessageBodyIsOutOfLine):
(CoreIPC::Connection::processMessage):
(CoreIPC::Connection::sendOutgoingMessage):
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didReceiveMessage):
* UIProcess/WebProcessProxy.cpp:
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::didReceiveMessage):

Canonical link: https://commits.webkit.org/126487@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141203 268f45cc-cd09-0410-ab3c-d52691b4dbfc